[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/KineticTransitionAnchor/Kinetic Transition Anchor.gd" type="Script" id=1]
[ext_resource path="res://src/KineticTransitionAnchor/GravityWellNotifier.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]

[sub_resource type="CircleShape2D" id=2]

[node name="Kinetic Transition Anchor" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="GravityWellNotifier" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 4
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="GravityWellNotifier"]
shape = SubResource( 2 )

[node name="EnterGravityWellTimeout" type="Timer" parent="."]

[connection signal="mouse_entered" from="." to="." method="_on_Kinetic_Transition_Anchor_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Kinetic_Transition_Anchor_mouse_exited"]
[connection signal="area_shape_entered" from="GravityWellNotifier" to="." method="_on_GravityWellNotifier_area_shape_entered"]
[connection signal="area_shape_exited" from="GravityWellNotifier" to="." method="_on_GravityWellNotifier_area_shape_exited"]
[connection signal="timeout" from="EnterGravityWellTimeout" to="." method="_on_EnterGravityWellTimeout_timeout"]
